<resources>
        <string name="app_name">permission</string>
        <string name="learn_touchpal">Learn to dial</string>
        <string name="save">Save</string>
        <string name="edit">Edit</string>
        <string name="done">Done</string>
        <string name="today">Today</string>
        <string name="year">Year</string>
        <string name="date">th</string>
        <string name="hour">hour</string>
        <string name="minute">min</string>
        <string name="AM">AM</string>
        <string name="PM">PM</string>
        <string name="yesterday">Yday</string>
        <string name="notranslate_today">今天</string>
        <string name="notranslate_yesterday">昨天</string>
        <string name="dlg_standard_title">TouchPal notification</string>
        <string name="dlg_no_show_again">Do not show this again</string>
        <string name="clear_callog">Clear</string>
        <string name="go_on">continue</string>
        <string name="monday">Monday</string>
        <string name="tuesday">Tuesday</string>
        <string name="wednesday">Wednesday</string>
        <string name="thursday">Thursday</string>
        <string name="friday">Friday</string>
        <string name="saturday">Saturday</string>
        <string name="sunday">Sunday</string>
        <string name="tabbar_dial">Dialpad</string>
        <string name="tabbar_contact">Contact</string>
        <string name="tabbar_discovery">Discovery</string>
        <string name="tabbar_websearch">Wallet</string>
        <string name="tabbar_delete">Delete</string>
        <string name="tabbar_keyboard_up_long">Unfold</string>
        <string name="tabbar_keyboard_down_long">Fold</string>
        <string name="tabbar_keyboard_up_short">Unfold</string>
        <string name="tabbar_keyboard_down_short">Fold</string>
        <string name="voicemail">Voicemail</string>
        <string name="hiddennum">Hidden number</string>
        <string name="privatenum">Private number</string>
        <string name="payphone">Pay phone</string>
        <string name="attr_local_number">Local</string>
        <string name="attr_local_service_number">Toll-free</string>
        <string name="attr_local_voip_number">VoIP call</string>
        <string name="attr_local_taiwan_number">Taiwan long-distance call</string>
        <string name="calllog_notconnected">N/A</string>
        <string name="searchbar_input_hint">Search</string>
        <string name="sys_group_name_my_contacts">My contacts</string>
        <string name="sys_group_name_friends">Friends</string>
        <string name="sys_group_name_family">Family</string>
        <string name="sys_group_name_coworkers">Coworkers</string>
        <string name="starred_in_android">Starred</string>
        <string name="groupmember_addpeople_title">Add member</string>
        <string name="set_contact_group_title">Edit group</string>
        <string name="no_phone_in_contacts">There\'s no contact with phone number!</string>
        <string name="picker_text_indicate_zero">Select contact</string>
        <string name="save_to_exist_contact">Save to contact</string>
        <string name="group_sms_select_title">Select phone number</string>
        <string name="delete_group_title">Confirm to delete this group?</string>
        <string name="ungrouped_name">Ungrouped</string>
        <string name="group_choice_account_hint">Choose account</string>
        <string name="group_input_name_hint">Group name</string>
        <string name="add_group_input_name_title">New group</string>
        <string name="edit_group_title">Rename group</string>
        <string name="ringtone">Ringtone</string>
        <string name="default_ringtone">Default ringtone</string>
        <string name="blockcall">Call block</string>
        <string name="nickname">Nickname</string>
        <string name="block_no_block">No block</string>
        <string name="block_black_list">Add to black list</string>
        <string name="block_white_list">Add to white list</string>
        <string name="remove_black_list">Remove from black list</string>
        <string name="remove_white_list">Remove from white list</string>
        <string name="success_add_black">Add to black list successfully</string>
        <string name="success_add_white">Add to white list successfully</string>
        <string name="success_remove_black">Removed from black list</string>
        <string name="success_remove_white">Removed from black list</string>
        <string name="detail_block_blacklist">Added to black list</string>
        <string name="detail_block_whitelist">Added to white list</string>
        <string name="detail_tailleftbtn_title">Detail</string>
        <string name="detail_tailrightbtn_title">Call logs</string>
        <string name="detail_copy_makedefault_makedefault">Set as default number</string>
        <string name="detail_phone_withlabel_type">%1$s (%2$s)</string>
        <string name="detail_email_nolabel_type">Email</string>
        <string name="detail_email_withlabel_type">Email (%s)</string>
        <string name="detail_postal_nolabel_type">Address</string>
        <string name="detail_postal_withlabel_type">Address (%s)</string>
        <string name="detail_website_type">Website</string>
        <string name="detail_edit_group_hint">Edit groups…</string>
        <string name="edit_note_title">Edit note</string>
        <string name="note">Note</string>
        <string name="group">Group</string>
        <string name="copy_number_success">The number has been copied!</string>
        <string name="copy_content_tip">The selected text has been copied!</string>
        <string name="detail_no_intent_resolver">Failed to execute the action!</string>
        <string name="cm_copy_number">Copy number</string>
        <string name="detail_share_title">Share</string>
        <string name="dlg_detail_avatar_title">Change the photo</string>
        <string name="dlg_detail_avatar_camera">Take photo</string>
        <string name="dlg_detail_avatar_albums">Load from file</string>
        <string name="dlg_detail_avatar_clear_photo">Clear</string>
        <string name="dlg_detail_add_birthday">Add birthday</string>
        <string name="dlg_detail_add_black">add black</string>
        <string name="dlg_detail_add_white">add white</string>
        <string name="dlg_detail_del_contact">Delete contact</string>
        <string name="block_alt">Cick to remove</string>
        <string name="dlg_detail_gesture_guide_main">How to use gesture dial</string>
        <string name="dlg_detail_gesture_guide_alt">Draw a gesture on dialpad to dail</string>
        <string name="copy_content_to_clipboard">复制到剪贴板</string>
        <string name="copy_content_success">已成功复制</string>
        <string name="clear_title">Clear</string>
        <string name="calllog_empty_tips">No call with him/her for a long time.</string>
        <string name="om_pref_block">Block settings</string>
        <string name="om_share_error">Failed to share the contact!</string>
        <string name="om_share_contact">Share contact</string>
        <string name="om_clear_all_calllog">Clear call logs?</string>
        <string name="om_clear_all_missed">Clear missed calls?</string>
        <string name="om_clear_all_incoming">Clear incoming calls?</string>
        <string name="om_clear_all_outgoing">Clear outgoing calls?</string>
        <string name="om_clear_all_unknown">Clear unknown calls?</string>
        <string name="om_clear_all_reject">Clear reject calls?</string>
        <string name="share_method_sms">Share by message</string>
        <string name="share_method_text">Share by text</string>
        <string name="share_method_vcard">Share by vCard</string>
        <string name="share_dialog_title">Share contact</string>
        <string name="dialog_email_chooser">Send email…</string>
        <string name="dialog_text_share_chooser">Share with…</string>
        <string name="dialog_crashlog_collection_title">Crash Log Collection</string>
        <string name="dialog_crashlog_collection_message">TouchPal was terminated abnormally! Would you like to send crash log by email?</string>
        <string name="delete_group_success">The group has been deleted!</string>
        <string name="add_group_success">The group has been created!</string>
        <string name="add_group_duplicate_name_error">The group exists already!</string>
        <string name="add_group_empty_name_error">The group name is empty!</string>
        <string name="intent_resolver_voice_mail_not_found">Voicemail is not supported!</string>
        <string name="speed_dial_voice_mail">Voicemail</string>
        <string name="change_dial_num">Change number</string>
        <string name="remove_dial_num">Remove number</string>
        <string name="replace_speed_dial">Speed dial number %1$d will be set to %2$s (%3$s), do you confirm?</string>
        <string name="empty_number">Empty</string>
        <string name="emergency_call_resitriction">Emergency call is not supported due to the system limitation, please use system dialer to call!</string>
        <string name="binding_failed">Bind %s fail</string>
        <string name="dialer_unknown_number_sms">Send message</string>
        <string name="call">Dial</string>
        <string name="gesture_list_title">Gesture dial</string>
        <string name="sys_voice_dial">Voice dialing</string>
        <string name="sys_call_last">Call first number of list</string>
        <string name="sys_sms_last">SMS first number of list</string>
        <string name="later">Later</string>
        <string name="dlg_detail_gesture_ok">Enable</string>
        <string name="dlg_detail_gesture_cancel">Discard</string>
        <string name="show_group_management_dialog">Progressing. Please wait…</string>
        <string name="account_selector_title">Select account</string>
        <string name="sim_card_contacts">SIM card contacts</string>
        <string name="miui_permission_guide_title">MIUI初始设置</string>
        <string name="miui_permission_guide_line_one">为确保您正常使用触宝电话完整功能</string>
        <string name="miui_permission_guide_line_two">请将以下权限设置为“允许”</string>
        <string name="miui_permission_button_call">允许拨打电话</string>
        <string name="miui_permission_button_autoboot">允许自启动</string>
        <string name="miui_permission_button_data_line_one">允许显示</string>
        <string name="miui_permission_button_data_line_two">通话记录、联系人、短信权限</string>
        <string name="huawei_app_permission_step_one_v1">第1步：点击\"应用程序\"</string>
        <string name="huawei_app_permission_step_two">第2步：依次完成下面操作</string>
        <string name="huawei_app_permission_find_touchpal">找到\"触宝电话\"</string>
        <string name="huawei_app_permission_trust">信任此应用程序</string>
        <string name="huawei_app_permission_trust_all">允许此应用申请的所有权限</string>
        <string name="huawei_permission_allowed">已允许</string>
        <string name="huawei_toast_permission_step_one">第一步：点击设置图标</string>
        <string name="huawei_toast_permission_step_two_v1">第二步：依次完成下面操作</string>
        <string name="huawei_toast_permission_click_icon">选择悬浮窗管理</string>
        <string name="huawei_toast_permission_icon_name">悬浮窗管理</string>
        <string name="huawei_toast_permission_allow_touchpal">找到\"触宝电话\"，允许显示悬浮窗</string>
        <string name="huawei_app_permission_allow_touchpal">勾选\"信任次应用程序\"</string>
        <string name="permission_guide_exit_confirm_content">The Important permissions are not open, which will affect the normal use of the TouchPal.</string>
        <string name="permission_guide_exit_confirm_cancel_button">Quit</string>
        <string name="permission_guide_exit_confirm_confirm_buttong">Continue</string>
        <string name="go_to_setting">立即设置</string>
        <string name="permission_auto_guide_title">一键优化需要开启以下权限</string>
        <string name="permission_auto_guide_step_1">1）点击【触宝电话】- 请开启优化</string>
        <string name="permission_auto_guide_step_2">2）打开开关</string>
</resources>