<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/light_blue_500"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/basic_text_size_1"
            android:text="@string/permission_auto_guide_title"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:textSize="@dimen/basic_text_size_5"
            android:text="@string/permission_auto_guide_step_1"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/white"
            android:textSize="@dimen/basic_text_size_5"
            android:text="@string/permission_auto_guide_step_2"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="260dp" />
        <LinearLayout
            android:id="@+id/points"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        </LinearLayout>

        <TextView
            android:id="@+id/start_setting"
            android:layout_marginTop="30dp"
            android:layout_height="44dp"
            android:layout_width="200dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/permission_auto_optimize_bg"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/basic_text_size_5"
            android:text="@string/go_to_setting"/>
    </LinearLayout>
</RelativeLayout>